@@ -33,9 +33,9 @@ import org.junit.Test;
 import org.xml.sax.SAXException;
 
 /**
- * Test case for {@link SentimentParser}
+ * Test case for {@link SentimentAnalysisParser}
  */
-public class SentimentParserTest {
+public class SentimentAnalysisParserTest {
 
     @Test
     public void endToEndTest() throws Exception {
