@@ -1,5 +1,8 @@
 Release 1.16 - ??/??/????
 
+  * Rename SentimentParser to SentimentAnalysisParser to
+    prevent conflict with dependency (TIKA-2368).
+
   * tika-app now extracts inline images in PDFs by
     default, and it includes a warning to users that this is not the
     default behavior elsewhere in Tika (TIKA-2374).
